awsebs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-clouddisk
spec:
  containers:
  - name: clouddisk
    image: nginx
    volumeMounts:
    - name: cloud disk
      mountPath: /cache
  volumes:
  - name: clouddisk
    awsElasticBlockStore:
      volumeID: <volumeid> 
      fsType: ext4
