deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-nginx
  labels:     #lables are optional here 
    app: nginx-app
spec:
  replicas: 5
  selector:
   matchLabels:
    app: nginx-app
  template:
    metadata:
      name: deploy-nginx
      namespace: default
      labels:
       app: nginx-app
    spec:
      containers:
      - name: nginxwebapp
        image: nginx
        ports:
        - containerPort: 80
