hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-hostpath
spec:
  containers:
  - name: hostpathcontainer
    image: nginx
    volumeMounts:
    - name: hostpathtest
      mountPath: /cache
  volumes:
  - name: hostpathtest
    hostPath: 
      path: /test-hostpath


Other values for type are DirectoryOrCreate, File, FileOrCreate. Where *OrCreate will be created dynamically if it doesn't already exist on the host.
