pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: mynginx
 namespace: default
 labels:
  run: nginx
spec:
 containers:
  - name: nginx
    image: nginx
    ports: 
      - containerPort: 80
