pod2.yaml
apiVersion: v1
kind: Pod
metadata:
 name: mynginx1
 namespace: default
 labels:
  run: nginx
spec:
 containers:
  - name: nginx
    image: nginx
    ports: 
      - containerPort: 80
  - name: ubuntu
    image: ubuntu
    ports:
      - containerPort: 8080
