podcreation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kamipod
  namespace: default
  labels:
    app: nginx-app
spec:
 containers:
 - name: nginx-kami
   image: nginx
   ports:
   - containerPort: 80
