service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
  labels:
    app: nginx-app  
spec:
  selector:
    app: nginx-app
  type: NodePort
  ports:
  - nodePort: 31000
    port: 80 
    targetPort: 80
